--- a/notebooks/Nginx课件/manifest.json
+++ b/notebooks/Nginx课件/manifest.json
@@ -1,1 +1,1 @@
-{"res":[{"autoopen":false,"ftype":0,"id":0,"name":"Nginx课件.pdf","progress":[{"readingPage":0,"readingPageOffset":0,"readingPercent":0}],"readingProgressPage":0,"readingProgressPageOffset":0,"refhash":"12e34fd17f3ddecf95789d43fe481b10","refpath":"D:/Study/nginx/课件/Nginx课件.pdf","uuid":"b1c7c2b55a4b39afc0932eb05f823d49"}],"resid":1,"version":1}
+{"res":[{"autoopen":false,"ftype":0,"id":0,"name":"Nginx课件.pdf","refhash":"12e34fd17f3ddecf95789d43fe481b10","refpath":"D:/Program Files/nginx学习/课件/Nginx课件.pdf","uuid":"33f3dfc72ebc30311402960c6a3a0f80"}],"resid":1,"version":1}
