--- a/user_config.json
+++ b/user_config.json
@@ -1,3 +1,10 @@
 {
-    "ShowMode": 0
+    "CaseSensitive": false,
+    "EpubFont": "微软雅黑",
+    "ShowMode": 0,
+    "TextFrame": {
+        "Color": "ffff8280"
+    },
+    "TextFrameFontSize": 10,
+    "WholeWord": true
 }
